# fengxian-cyber-taoist

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README-EN.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py  simulation_report.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  divination.py  project.py  user.py
backend/app/services/: __init__.py  consultant_agent.py  graph_builder.py  narrative_generator.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  report_service.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  task_tracker.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/storage/: __init__.py  adapter.py  paths.py
backend/app/utils/: capability_manager.py  chart_generator.py  file_parser.py  llm_client.py  logger.py  markdown_to_pdf.py  redis_cache.py  report_chart_helper.py  retry.py  s3_storage.py  unified_report_generator.py  vector_db.py  zep_paging.py
backend/migrations/: 001_create_vector_db.sql  001_users_and_subscriptions.sql
backend/scripts/: check_test_isolation.py  md_to_pdf.py  test_astrology_injection.py  test_consultant.py  test_global_fortune.py
backend/tests/: conftest.py  test_divination_agents_mock.py  test_fortune_calculator.py
backend/tests/e2e/: test_auth_payment_api.py  test_birth_timing_llm.py  (+10 more)
(+242 files in other folders)
